fix ci script and enable more tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,11 +29,15 @@ install:
     # clean target directory
     - rm -rf $STP/User/*
     # enable Six package
-    - ln -s `pwd`/../Six "$STP/Six"
+    - ls ..
+    - ln -s "`pwd`/../Six" "$STP/Six"
+    - ls -al $STP
+    - ls -al "$STP/User"
     # enable our package
     - ln -s `pwd` "$STP/User/six"
     # make sure Sublime Text will load our package
-    - echo "from User.six.surround import *\n\ndef plugin_loaded():\n    surround()\n" > "$STP/User/sixrc.py"
+    - printf "from User.six.surround import *\n\ndef plugin_loaded():\n    surround()\n" > "$STP/User/sixrc.py"
+    - cat "$STP/User/sixrc.py"
     # configure UnitTesting
     - >
         echo { \"tests_dir\": \"./six/tests\" } > "$STP/User/unittesting.json"
